Upgraded to textual@0.25.0, fixed layout bugs and added screenshots to README.md.

--- a/txt2dub/styles/app.css
+++ b/txt2dub/styles/app.css
@@ -127,6 +127,8 @@ Logo {
     padding-bottom: 1;
     border: none;
     border-top: hkey $panel;
+    /* HACK: auto height broke for bottom docked toolbars in textual@0.25.0. */
+    height: 5;
 }
 
 .toolbar .row {
